# swarmify

./: .agents  .gitignore  .mcp.json  .swarmify  .vscodeignore  AGENTS.md  AGENT_IMPROVEMENTS.md  API.md  BUGS.md  CLAUDE.md  CODE_REVIEW.md  COMPACT.md  FINAL_EVALUATION.md  README.md  RESEARCH.md  REVIEW_SUMMARY.md  TODO.md  Untitled  cursor-agents-1.0.0.vsix  cursor-agents-1.0.1.vsix  package-lock.json  package.json
agents-cli/: AGENTS.md  CHANGELOG.md  (+2 more)
cli/: .gitignore  CRITICAL_TEST_GAPS.md  LICENSE  README.md  SAFETY_VERIFICATION.md  TEST_SUMMARY.md  TODO.md  package-lock.json  package.json  pyproject.toml
cli/.claude/agent-swarm/agents/0016cbc4/: meta.json
cli/.claude/agent-swarm/agents/0312c983/: meta.json
cli/.claude/agent-swarm/agents/3a883cc1/: meta.json
cli/.claude/agent-swarm/agents/9790ed0b/: meta.json
cli/.claude/agent-swarm/agents/b9e3b382/: meta.json
cli/.claude/agent-swarm/agents/e321b675/: meta.json
cli/.claude/agent-swarm/agents/eafc13e7/: meta.json
cli/.claude/agent-swarm/agents/ef90436a/: meta.json
cli/scripts/: publish.sh  test.sh
cli/src/: agents.ts  index.ts  skills.ts
cli/src/__tests__/: agents.test.ts  skills.test.ts
cli/src/agent_spawner/: agents.py  parsers.py  server.py  summarizer.py
cli/src/agent_swarm/: __init__.py  agents.py  parsers.py  server.py  summarizer.py
cli/tests/: test_agents.py  test_parsers.py  test_safety.py  test_server.py  test_summarizer.py
cli/tests/testdata/agent_manager_concurrent_completion_tests/68f5aa77/: meta.json
cli/tests/testdata/agent_manager_concurrent_completion_tests/8e4eba4b/: meta.json
cli/tests/testdata/agent_manager_concurrent_completion_tests/ab3f86c5/: meta.json
cli/tests/testdata/agent_manager_concurrent_completion_tests/completed-1/: meta.json
cli/tests/testdata/agent_manager_concurrent_completion_tests/running-1/: meta.json
cli/tests/testdata/agent_manager_concurrent_refresh_tests/26892f7b/: meta.json
cli/tests/testdata/agent_manager_concurrent_refresh_tests/6c33e8ec/: meta.json
cli/tests/testdata/agent_manager_concurrent_refresh_tests/adb706c8/: meta.json
(+592 files in other folders)
