[project]
name = "agent-spawner"
version = "0.1.0"
description = "MCP server for spawning and orchestrating AI coding agents (Claude, Codex, Gemini, Cursor)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
agent-spawner = "agent_spawner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_spawner"]
