[project]
name = "agent-swarm"
version = "0.1.0"
description = "Give your AI coding agent the ability to spawn other agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Muqsit Nawaz", email = "muqsitnawaz@gmail.com" }
]
keywords = [
    "ai",
    "agents",
    "claude",
    "codex",
    "gemini",
    "cursor",
    "mcp",
    "orchestration",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/muqsitnawaz/CursorAgents"
Repository = "https://github.com/muqsitnawaz/CursorAgents"
Issues = "https://github.com/muqsitnawaz/CursorAgents/issues"

[project.scripts]
agent-swarm = "agent_swarm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_swarm"]
